--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Digital Akademia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jadi Ahli Digital Modal Niat!</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fceabb;
+      background-image: linear-gradient(45deg, #f8b500, #fceabb);
+      text-align: center;
+      color: #333;
+    }
+    .container {
+      padding: 30px 20px;
+    }
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 18px;
+      margin-bottom: 25px;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin-bottom: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .cta-button {
+      background-color: #25D366;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 50px;
+      font-size: 18px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    }
+    .cta-button:hover {
+      background-color: #1ebe5d;
+    }
+  </style>
 </head>
 <body>
-  <h1>Selamat Datang di Digital Akademia</h1>
-  <p>Website ini sedang dikembangkan.</p>
+  <div class="container">
+    <h1>JADI AHLI DIGITAL MODAL NIAT 💰</h1>
+    <p>Tanpa perlu pengalaman teknis, kamu bisa mulai hasilkan penghasilan dari HP.</p>
+    
+    <!-- Ganti link gambar ini dengan milikmu -->
+    <img src="https://media.giphy.com/media/3o7btUqvEdt6QkWIRW/giphy.gif" alt="GIF motivasi">
+    
+    <!-- Link WA ganti dengan nomor milikmu -->
+    <a class="cta-button" href="https://wa.me/6282111777005" target="_blank">Gabung Sekarang via WhatsApp</a>
+  </div>
 </body>
 </html>
-
