--- a/index.html
+++ b/index.html
@@ -3,61 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jadi Ahli Digital Modal Niat!</title>
+  <title>Judul dalam Proses</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      background-color: #fceabb;
-      background-image: linear-gradient(45deg, #f8b500, #fceabb);
+      background-color: #000;
+      color: #fff;
+      line-height: 1.6;
       text-align: center;
-      color: #333;
     }
     .container {
-      padding: 30px 20px;
+      padding: 30px 15px;
+      max-width: 800px;
+      margin: auto;
     }
     h1 {
       font-size: 32px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
     p {
       font-size: 18px;
       margin-bottom: 25px;
     }
-    img {
-      max-width: 90%;
-      height: auto;
-      margin-bottom: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
     .cta-button {
+      display: inline-block;
       background-color: #25D366;
       color: white;
       padding: 15px 30px;
-      border: none;
-      border-radius: 50px;
-      font-size: 18px;
-      cursor: pointer;
+      border-radius: 40px;
       text-decoration: none;
-      display: inline-block;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      font-size: 18px;
+      margin-top: 30px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.5);
     }
     .cta-button:hover {
       background-color: #1ebe5d;
+    }
+    marquee {
+      font-size: 16px;
+      margin-top: 40px;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>JADI AHLI DIGITAL MODAL NIAT 💰</h1>
-    <p>Tanpa perlu pengalaman teknis, kamu bisa mulai hasilkan penghasilan dari HP.</p>
-    
-    <!-- Ganti link gambar ini dengan milikmu -->
-    <img src="https://media.giphy.com/media/3o7btUqvEdt6QkWIRW/giphy.gif" alt="GIF motivasi">
-    
-    <!-- Link WA ganti dengan nomor milikmu -->
-    <a class="cta-button" href="https://wa.me/6282111777005" target="_blank">Gabung Sekarang via WhatsApp</a>
+    <h1>Judul dalam Proses</h1>
+    <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac risus ac ante imperdiet lacinia. Nulla facilisi. Vivamus ut odio vitae nunc cursus tempor.</strong></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at ligula vel lorem suscipit pulvinar. Sed vitae fermentum elit. Integer tristique imperdiet gravida. Aenean volutpat eget odio a feugiat. In ut vehicula libero, sit amet fermentum enim. Cras nec sapien vitae nulla tincidunt euismod. Nulla eu justo ac lacus convallis suscipit.</p>
+    <p>Sed sed turpis eget felis hendrerit convallis. Donec sagittis augue et purus malesuada, vitae condimentum libero ultrices. Curabitur convallis lectus ac arcu faucibus, ut imperdiet odio rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc congue erat vel leo dapibus, a bibendum ipsum facilisis.</p>
+    <p>Nam at leo vel tortor convallis blandit. Etiam varius vestibulum sapien, at ultrices diam tincidunt at. Nulla facilisi. Duis et nunc magna. Mauris convallis justo eget ipsum facilisis, sed sollicitudin purus gravida. Duis nec mattis justo. Etiam eu eros id sem imperdiet ullamcorper. Sed nec lorem in nulla pretium convallis.</p>
+
+    <a class="cta-button" href="https://wa.me/6282111777005" target="_blank">Gabung Sekarang</a>
+
+    <marquee behavior="scroll" direction="left">⚡️ Ayo jangan tunda lagi! Kesempatan ini hanya untuk yang serius berubah! ⚡️</marquee>
   </div>
 </body>
 </html>
